# kursovaya

./: .gitignore  .md  README.md  pyproject.toml  report.json
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_views.py
