[tool.poetry]
name = "transaction-analysis"
version = "0.1.0"
description = "Transaction Analysis Project"
authors = ["Your Name <rleonovic98@gmail.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.0.0"
requests = "^2.26.0"
openpyxl = "^3.0.7"
datetime = "^5.5"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
flake8 = "^4.0.0"
black = "^22.0.0"
isort = "^5.10.0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
)/
'''

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'
